# range_test

./: .gitignore
esp_platform/: CMakeLists.txt  README.md  flash_nvs.bat  generate_nvs.bat  nvs.csv  partitions.csv  requirements.txt  sdkconfig  sdkconfig.old
esp_platform/main/: CMakeLists.txt  adc_bat.c  adc_bat.h  app_event_group.h  bgt60l_spi.c  bgt60l_spi.h  bgt60ltr11aip.c  bgt60ltr11aip.h  blink_example_main.c  cc1101.c  cc1101.h  gap.c  gap.h  gatt_svr.c  gatt_svr.h  gpio_wakeup.c  gpio_wakeup.h  moduledata.c  moduledata.h  ota_event_bits.h  spi_task.c  spi_task.h  sths34pf80_task.c  sths34pf80_task.h
helloworld/: sdkconfig
